# songburst

./: LICENSE  README.md  conductance.py  environment.yml  hvc.py  izneurons.py  networks.py  neurons.py  poly.py  pyproject.toml
documentation/: conductance.md  hvc.md  izneurons.md  networks.md  neurons.md
songburst/: conductance.py  hvc.py  izneurons.py  networks.py  poly.py  rnn.py  trial.ipynb
