[tool.poetry]
name = "songburst"
version = "0.1.0"
description = "Tools for modeling networks of spiking HVC neurons"
authors = ["shivChitinous <shivamchitnis66@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.24"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
scipy = "^1.9.2"
xarray = "0.19.0"
seaborn = "^0.11.2"
scikit-image = "^0.19.2"
astropy = "^5.1"
bayesian-optimization="^1.4.2"
brian2 = "2.5.1"
brian2modelfitting = "0.4"
scikit-learn="^1.2.0"
scikit-optimize="^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
